# yali

./: .bazelignore  .bazelrc  .clang-format  .gitignore  .gitmodules  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  SETUP.md  WORKSPACE
bench/: benchmark_nccl.cu  benchmark_nccl_mpi.cu  benchmark_yali.cu  benchmark_yali_mpi.cu
docs/: ARCHITECTURE.md
docs/benchmark/artifacts/2026-01-15/: README.md
docs/benchmark/artifacts/2026-01-15/151357-standard/: summary.md
docs/benchmark/artifacts/2026-01-15/151357-standard/hw-baseline/: system_info.json
docs/benchmark/artifacts/2026-01-15/151357-standard/mpi/nccl/: bf16.csv  fp16.csv  fp32.csv
docs/benchmark/artifacts/2026-01-15/151357-standard/mpi/yali/: bf16.csv  fp16.csv  fp32.csv
docs/benchmark/artifacts/2026-01-15/151357-standard/single-process/nccl/: bf16.csv  fp16.csv  fp32.csv
docs/benchmark/artifacts/2026-01-15/151357-standard/single-process/yali/: bf16.csv  fp16.csv  fp32.csv
docs/benchmark/artifacts/2026-01-15/152933-extensive/: summary.md
docs/benchmark/artifacts/2026-01-15/152933-extensive/hw-baseline/: system_info.json
docs/benchmark/artifacts/2026-01-15/152933-extensive/mpi/nccl/: bf16.csv  fp16.csv  fp32.csv
docs/benchmark/artifacts/2026-01-15/152933-extensive/mpi/yali/: bf16.csv  fp16.csv  fp32.csv
docs/benchmark/artifacts/2026-01-15/152933-extensive/single-process/nccl/: bf16.csv  fp16.csv  fp32.csv
docs/benchmark/artifacts/2026-01-15/152933-extensive/single-process/yali/: bf16.csv  fp16.csv  fp32.csv
docs/benchmark/artifacts/2026-01-15/164632-quick-profiler/: summary.md
docs/benchmark/artifacts/2026-01-15/164632-quick-profiler/hw-baseline/: system_info.json
docs/benchmark/artifacts/2026-01-15/164632-quick-profiler/mpi/nccl/: fp32.csv
docs/benchmark/artifacts/2026-01-15/164632-quick-profiler/mpi/yali/: fp32.csv
docs/benchmark/artifacts/2026-01-15/164632-quick-profiler/profiler/: profiler_summary.json
docs/benchmark/artifacts/2026-01-15/164632-quick-profiler/single-process/nccl/: fp32.csv
docs/benchmark/artifacts/2026-01-15/164632-quick-profiler/single-process/yali/: fp32.csv
examples/: README.md  build_examples.sh
examples/01_single_process/: README.md
examples/01_single_process/01_allreduce/: README.md  multilane.cu  simple.cu
examples/02_multi_process/01_allreduce/: multilane_mpi.cu  simple_mpi.cu
scripts/: build_nccl_tests.sh  quick_benchmark.py  sweep.py
src/all_reduce/: all_reduce.h  flash.cuh  kernels.cuh  stream.cuh
src/comm/: comm.cu  comm.h  ipc.cu  ipc.cuh
src/common/: buffer_ops.cuh  hw_info.cuh  peer_access.cuh  validation.cuh
src/include/: yali.h  yali_launch.h  yali_tuning.h
src/kernels/: ring.cuh  stream.cu  stream.cuh  type_ops.cuh
src/ops/: README.md  allreduce.cuh  allreduce_mpi.cuh
tests/: consolidate_eval.py  run_example_perf.sh  run_mpi_example.sh  run_nccl_baseline.sh  test_bw_ops.cu  test_ops_allreduce.cu  test_ops_allreduce_mpi.cu  validate_nccl_tests.sh  validate_nccl_version.sh  validate_nvbandwidth.sh
tests/unit/: run_unit_test.sh  run_unit_tests.sh  test_all_reduce_correctness.cu  test_all_reduce_interface.cu  test_buffer_ops.cu  test_dtypes.cu  test_framework.h  test_peer_access.cu  test_validation.cu
